--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="app"></div>  
        
-    <script type="text/javascript" src="home.js"></script>
+    <script type="text/javascript" src="app/bundle.js"></script>
   </body>
 </html>
